프로토화면구성 : 메인,메뉴,장바구니,회원가입,다른배송지 프로토액션바구성

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="IntroActivity"></activity>
+        <activity android:name="AddUser"></activity>
+        <activity android:name="Cart"></activity>
+        <activity android:name=".setaddr.SetAddr"></activity>
 
     </application>
 
