--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -20,6 +20,7 @@
     android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:label="@string/app_name"
