--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity android:name=".drawer.CenterActivity"></activity>
         <activity android:name=".drawer.EventActivity"></activity>
         <activity android:name=".drawer.SettingActivity"></activity>
-        <activity android:name=".drawer.MyHistoryActivity"></activity>
+        <activity android:name="kr.actus.ckck.drawer.MyHistoryActivity"></activity>
 
     </application>
 
