장바구니 합계계산 주문 완료후 장바구니 내역 삭제 장바구니 내역 주문하기에 적용(주문하기화면에서는 삭제키 안보여줌) 메인화면 액션바 장바구니아이콘 기능구현 다른 배송지 주소로 설정 부분 구현

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,9 @@
         <activity android:name="CartActivity"></activity>
         <activity android:name=".setaddr.SetAddrActivity"></activity>
         <activity android:name="SelectOrderActivity"></activity>
-        <activity android:name="SendOrderActivity"></activity>
+        <activity android:name="SendOrderActivity" 
+            	android:windowSoftInputMode="stateHidden"> 
+        </activity>
         <activity android:name=".drawer.CenterActivity"></activity>
         <activity android:name=".drawer.EventActivity"></activity>
         <activity android:name=".drawer.SettingActivity"></activity>
