내주문내역상세화면출력 현재위치설정MapView구현

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,10 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+    <uses-feature android:required="true" android:glEsVersion="0x00020000"/>
+    <permission android:name="kr.actus.ckck.setaddr.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICE"/>
 
     <application
         android:label="@string/app_name"
@@ -34,7 +38,7 @@
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
 
         <activity
-            android:name="kr.actus.ckck.MainActivity"
+            android:name="MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,6 +57,14 @@
         <activity android:name=".drawer.EventActivity"></activity>
         <activity android:name=".drawer.SettingActivity"></activity>
         <activity android:name="kr.actus.ckck.drawer.MyHistoryActivity"></activity>
+        <meta-data android:value="@integer/google_play_services_version" android:name="com.google.android.gms.version"/>
+        <meta-data android:value="AIzaSyBRfAgEPoT2eOygZ0d4d4VAaLqt3_NaOP8" android:name="com.google.android.maps.v2.API_KEY"/>
+        <activity android:name=".myhistorylist.MyHistoryDialog"
+            	  android:theme="@android:style/Theme.Dialog"
+            	  android:windowSoftInputMode="stateHidden" 
+            	  android:configChanges="orientation|keyboardHidden">
+            
+        </activity>
 
     </application>
 
